# slack-chouseisan-remind-bot

./: .editorconfig  .gitignore  README.md  pyproject.toml
app/: __main__.py  chouseisan.py  index.py  util.py
