[tool.poetry]
name = "app"
version = "1.0.1"
description = ""
authors = ["secchanu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
slack-bolt = "^1.17.0"
schedule = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
